# BMSTU

Compile/07-02-2023-lab1/report/: report.md
Compile/lab1.5/: flex.txt  in.txt  lab1.5.l  lex.yy.c  report.md  run.sh
Compile/lab1_2/: input.txt  main.py  report.md
Compile/lab1_3/: input.txt  main.py  report.md
Compile/lab1_4/: in.txt  main.py  report.md
Compile/lab2_1/: astTree.go  astprint.go  report.md
Compile/lab2_1/demo/: demo.go
Compile/lab2_2/: abstractStructure.txt  grammar.txt  in.txt  main.py  report.md
Compile/lab2_3/: report.md
Compile/lab2_3/src/: in.txt  lex_struct.txt  main.py  node.py  parser.py  position.py  scanner.py  tok.py
Compile/lab2_4/: fragment.py  in.txt  main.py  message.py  node.py  parser.py  position.py  report.md  scanner.py  tag.py  tok.py
DataBase/: lab11.sql  lab_10_Aleksandrova.sql  lab_13_Aleksandrova.sql  lab_14_Aleksandrova.sql  lab_15_Aleksandrova.sql  lab_5_Aleksandrova.sql  lab_6_Aleksandrova.sql  lab_7_Aleksandrova.sql  lab_8_Aleksandrova.sql  lab_9_Aleksandrova.sql
DataBase/Reports/: lab_1_Aleksandrova.docx  lab_2_Aleksandrova.docx  lab_3_Aleksandrova.docx  lab_4_Aleksandrova.docx
NumMethods/lab1/: CMakeLists.txt  main.cpp
NumMethods/lab2/: lab2_Aleksandrova_61b.docx  main.cpp  ~$b2_Yarovikova_61b.docx
NumMethods/lab3_1/: main.py
NumMethods/lab5/: CMakeLists.txt  main.cpp
NumMethods/lab6_1/: main.py
NumMethods/lab7/: main.py
NumMethods/lab8/: main3.py
RPRP/Dinner/: CMakeLists.txt  main.cpp
RPRP/OpenMP/: CMakeLists.txt  main.cpp
RPRP/lab1/: main.py
RPRP/lab3Jacobi/: main.cpp
RPRP/reports/: Отчет Лабораторная работа 1.docx  Отчет Лабораторная работа 4.docx
Scala/lab1/: report.md  test.scala
Scala/lab2/: lab2.scala  report.md
Scala/lab3/: lab3.scala  labb3.scala  report.md
Scala/lab4/: lab44.scala  report.md
